integrating recommendation system for playlists
