# zema_store_backend/src/controllers/playlist.controllers.ts
@@ -1,13 +1,17 @@
+import axios from "axios";
 import { Request, Response } from "express";
 import { isNil } from "lodash";
+import CustomerProfile from "../models/mongoose/customer-profile";
 
 import Playlist from "../models/mongoose/playlist";
+import Song from "../models/mongoose/song";
 
 import ErrorResponse from "../models/responses/error-response.model";
 import OkResponse from "../models/responses/ok-response.model";
 import Utils from "../utils/utils";
 
 import {
+  addUserPreferenceSchema,
   createPlaylistSchema,
   deletePlaylistSchema,
   getPlaylistSchema,
@@ -33,6 +37,88 @@ const getPlaylist = async (req: Request, res: Response) => {
     res
       .status(200)
       .send(new OkResponse(playlist, "Playlist successfully fetched!"));
+  } catch (e) {
+    Utils.instance.handleResponseException(res, e);
+  }
+};
+
+const addUserPreference = async (req: Request, res: Response) => {
+  try {
+    const validate = addUserPreferenceSchema.validate(req.body);
+    if (validate.error && validate.error !== null) {
+      return res
+        .status(400)
+        .send(new ErrorResponse(validate.error.message, null));
+    }
+    const artists = req.body.artists;
+    const genres = req.body.genres;
+
+    const customer = await CustomerProfile.findById(res.locals.user?.profileId);
+    customer.favoriteArtists = artists;
+    customer.favoriteGenres = genres;
+
+    await customer.save();
+
+    res
+      .status(200)
+      .send(new OkResponse(null, "User preference successfully added!"));
+  } catch (e) {
+    Utils.instance.handleResponseException(res, e);
+  }
+};
+
+const getPopularPlaylist = async (req: Request, res: Response) => {
+  try {
+    // const popular = await axios.get(
+    //   "https://recommnder-playlist.herokuapp.com/get-popular/4"
+    // );
+    const playlist = await Song.find({
+      listenersCount: {
+        $gte: 1,
+      },
+    });
+
+    res
+      .status(200)
+      .send(
+        new OkResponse(playlist, "Popular playlist successfully fetched!")
+      );
+  } catch (e) {
+    Utils.instance.handleResponseException(res, e);
+  }
+};
+
+const getRecommendedPlaylist = async (req: Request, res: Response) => {
+  try {
+    // const similar = await axios.get(
+    //   "https://recommnder-playlist.herokuapp.com/get-similarity/4"
+    // );
+    const customer = await CustomerProfile.findById(res.locals.user?.profileId);
+    const fetchArtistPreferenceSongs = await Promise.all(
+      customer.favoriteArtists.map(async (artistId) => {
+        const song = await Song.find({ artistId });
+        return song;
+      })
+    );
+    const fetchGenrePreferenceSongs = await Promise.all(
+      customer.favoriteGenres.map(async (genre) => {
+        const song = await Song.find({ genre });
+        return song;
+      })
+    );
+
+    const playlist = fetchArtistPreferenceSongs.concat(
+      fetchGenrePreferenceSongs
+    );
+
+    res
+      .status(200)
+      .send(
+        new OkResponse(
+          playlist,
+          "Recommended playlist successfully fetched!"
+        )
+      );
   } catch (e) {
     Utils.instance.handleResponseException(res, e);
   }
@@ -144,6 +230,9 @@ const deletePlaylist = async (req: Request, res: Response) => {
 export {
   getPlaylist,
   getPlaylists,
+  addUserPreference,
+  getPopularPlaylist,
+  getRecommendedPlaylist,
   createPlaylist,
   updatePlaylist,
   deletePlaylist,
